update UnifiedDashboardController